<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>steve_pan_tilt_controller</name>
  <version>0.1.0</version>
  <description>Pan-tilt controller for STEVE robot using Dynamixel XH430-W250 motors</description>

  <author email="gchencha@uni-bonn.de">Gokul Chenchani</author>
  <maintainer email="gchencha@uni-bonn.de">Gokul Chenchani</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
